# leptos-demo-csr

./: Cargo.toml  Makefile  README.md  index.html  tailwind.config.js
.github/workflows/: action.yml
src/: asyn.rs  counter.rs  ctrlflow.rs  effect.rs  error_handling.rs  global_state.rs  input.rs  list.rs  main.rs  parent_child_talk.rs  progress_bar.rs  router.rs  select.rs  textarea.rs
