[package]
name = "leptos-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dyn-clone = "1.0"
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"] }
leptos = { version = "0.6", features = ["csr"] }
