[package]
name = "leptos-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dyn-clone = "1.0"
console_error_panic_hook = "0.1"
reqwest = "0.11"
anyhow = "1.0"

uuid = { version = "1.7", features = ["v4"] }
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_log = { version = "1.0", features = ["color"] }
gloo-timers = { version="0.3", features = ["futures"] }
